--- a/package.json
+++ b/package.json
@@ -138,12 +138,12 @@
     "dev:prof": "cross-env NODE_ENV=develop node --prof ./node_modules/.bin/webpack --mode development --colors",
     "prod:watch": "cross-env NODE_ENV=production webpack-dev-server --mode production --watch",
     "prod:build": "cross-env NODE_ENV=production webpack --mode production --progress --colors --hide-modules",
-    "prod:branch": "cross-env NODE_ENV=production branch=true webpack --mode production --progress --colors --hide-modules",
+    "prod:branch": "cross-env NODE_ENV=production branch=true   webpack --mode production --progress --colors --hide-modules",
     "prod:prof": "cross-env NODE_ENV=production webpack --mode production --profile --json > stats.json",
     "prod:stat": "npm run prod:prof && webpack-bundle-analyzer stats.json dist",
     "test:start": "./node_modules/.bin/enb make tmpl-specs",
     "test:rebuild": "cross-env BEM_TMPL_SPECS_SAVE_REFERENCE_HTML=true ./node_modules/.bin/enb make tmpl-specs",
-    "icon:build": "icon-font-generator src/blocks.01-base/fi/svg/*.svg -o src/blocks.02-common/fi/font --name fi -c false --html true --types woff",
+    "icon:build": "icon-font-generator src/blocks.01-base/fi/svg/*.svg -o src/blocks.01-base/fi/font --name fi -c false --html true --types woff",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
