--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "highlight.js": "^9.15.6",
     "inputmask": "^4.0.2",
     "jquery": "^3.3.1",
+    "jquery-nice-select": "^1.1.0",
     "jquery-ui": "^1.12.1",
     "jquery-ui-touch-punch": "^0.2.3",
     "json-pretty-html": "^1.2.0",
@@ -64,6 +65,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "sass-loader": "^7.1.0",
+    "selectize": "^0.12.6",
     "swiper": "^4.4.1",
     "tether": "^1.4.4",
     "throttle-debounce": "^2.0.1",
